# Project-AirSimPLE

./: .gitattributes  .gitignore  .lfsconfig  README.md  build-game.cmd  build-game.sh  build.WSL2.bash
AirSimPLE/: .gitignore  AirSimPLE.uproject
AirSimPLE/Config/: DefaultCrypto.ini  DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultGameUserSettings.ini
AirSimPLE/Plugins/AirSim/: AirSim.uplugin
AirSimPLE/Plugins/AirSim/Content/: AirSimAssets.umap
AirSimPLE/Plugins/AirSim/Content/Blueprints/: BP_ComputerVisionPawn.uasset
AirSimPLE/Plugins/AirSim/Content/HUDAssets/: DebugWidgetMonospace.uasset  DebugWidgetMonospaceFontFace.uasset  OpticalFlowMaterial.uasset  OpticalFlowRGBMaterial.uasset  OptionsMenu.uasset
AirSimPLE/Plugins/AirSim/Content/VehicleAdv/SUV/: SUV.uasset
AirSimPLE/Plugins/AirSim/Content/Weather/UI/: WeatherBoolWidget.uasset  WeatherParamScalarWidget.uasset  WeatherParamWindWidget.uasset
AirSimPLE/Plugins/AirSim/Source/AirSim/: AirSim.Build.cs
AirSimPLE/Plugins/AirSim/Source/AirSim/Private/: AirBlueprintLib.cpp  AirSimModule.cpp  DetectionComponent.cpp  ObjectFilter.cpp  PIPCamera.cpp  PawnSimApi.cpp  RenderRequest.cpp  TextureShuffleActor.cpp  UnrealImageCapture.cpp  WorldSimApi.cpp
AirSimPLE/Plugins/AirSim/Source/AirSim/Public/: AirBlueprintLib.h  DetectionComponent.h  (+1 more)
AirSimPLE/Source/: AirSimPLEEditor.Target.cs  Editor.Target.cs  FlyingExample.Target.cs
AirSimPLE/Source/AirSimPLE/: AirSimPLE.Build.cs  AirSimPLE.cpp
PythonClient/: pyproject.toml
PythonClient/airsimple/: client.py
PythonClient/scripts/: hello_drone.py
(+44 files in other folders)
