[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airsimple"
version = "1.8.1"
authors = [
  { name="Chiao Hsieh", email="hsieh.chiao.7k@kyoto-u.ac.jp" },
  { name="Shital Shah", email="shitals@microsoft.com" }
]
description = "Open source simulator based on AirSim and Unreal Engine."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'msgpack-rpc-python @ git+https://github.com/sethmnielsen/msgpack-rpc-python.git@tornado6',
    'numpy',
    'opencv-contrib-python'
]

[project.urls]
"Repository" = "https://git.iimc.kyoto-u.ac.jp/chiao709hsieh/airsimple"
"Bug Tracker" = "https://git.iimc.kyoto-u.ac.jp/chiao709hsieh/airsimple/issues"
